@@ -5,8 +5,6 @@ import pe.edu.unmsm.fisi.repository.UsuarioRepository;
 import pe.edu.unmsm.fisi.repository.UsuarioRepositoryImpl;
 
 public class AutenticacionServiceImpl implements AutenticacionService {
-
-    // El servicio necesita comunicarse con el repositorio de Adrián
     private final UsuarioRepository usuarioRepository;
 
     public AutenticacionServiceImpl() {
@@ -15,29 +13,12 @@ public class AutenticacionServiceImpl implements AutenticacionService {
 
     @Override
     public Usuario login(String correo, String password) {
-        
-        // 1. REGLAS DE NEGOCIO (Validaciones previas)
         if (correo == null || correo.trim().isEmpty()) {
-            System.err.println("Error de validación: El correo no puede estar vacío.");
-            return null; // Rechazado automáticamente
+            throw new IllegalArgumentException("El correo no puede estar vacío.");
         }
-        
-        if (password == null || password.trim().isEmpty()) {
-            System.err.println("Error de validación: La contraseña no puede estar vacía.");
-            return null; // Rechazado automáticamente
+        if (password == null || password.isBlank()) {
+            throw new IllegalArgumentException("La contraseña no puede estar vacía.");
         }
-
-        // 2. COMUNICACIÓN CON LA CAPA DE DATOS
-        // Si pasa los filtros de seguridad, enviamos la petición a MySQL
-        Usuario usuarioAutenticado = usuarioRepository.autenticar(correo, password);
-
-        // 3. RESPUESTA AL CLIENTE (Swing)
-        if (usuarioAutenticado == null) {
-            System.err.println("Aviso: Credenciales incorrectas o usuario no encontrado.");
-        } else {
-            System.out.println("¡Éxito! Bienvenido al sistema, " + usuarioAutenticado.getNombre());
-        }
-
-        return usuarioAutenticado;
+        return usuarioRepository.autenticar(correo.trim(), password);
     }
 }
